--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
   --brand-color: #fd9222;
   --pressed-state: #e66007;
+  --white: #ffffff;
   --text-color: #111111;
   --transition: 300ms linear;
 }
@@ -30,17 +31,19 @@ a {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 body {
   font-family: "Montserrat", sans-serif;
   color: var(--text-color);
-  background-color: #e9e9e9;
+  background-color: #fafafa;
 }
 
 .container {
   width: 100%;
-  max-width: 1176px;
+  max-width: 320px;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -58,363 +61,282 @@ body {
 }
 
 /* header */
-
 .page-header {
-  padding-top: 24px;
-  padding-bottom: 32px;
+  padding: 20px 0 14px;
 }
 
 .header-container {
   display: flex;
   align-items: center;
 }
-
-.header-nav {
-  display: flex;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.header-logo {
+.logo {
+  font-size: 14px;
   font-style: italic;
   font-weight: 700;
-  font-size: 18px;
-  line-height: calc(20 / 18);
-  letter-spacing: -0.03em;
-  color: var(--text-color);
-  transition: color var(--transition);
+  line-height: calc(18 / 14);
+  letter-spacing: 0.03em;
+  transition: var(--transition);
   display: flex;
   align-items: center;
-  margin-right: auto;
+  gap: 4px;
 }
-
 .logo-part {
   font-style: normal;
-  margin-right: 4px;
 }
 
-.logo-part:hover,
-.logo-part:focus {
-  color: var(--brand-color);
+.logo:is(:hover, :active) {
+  color: var(--pressed-state);
 }
 
-.header-nav-list {
-  display: flex;
-  margin-right: 90px;
-  gap: 24px;
+.menu-btn {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  margin-left: auto;
 }
 
-.header-nav-link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: calc(16 / 14);
-  letter-spacing: -0.02em;
-  color: var(--text-color);
-  transition: color var(--transition);
+.menu-icon {
+  stroke: #111111;
+  transition: stroke var(--transition);
 }
 
-.header-nav-link:hover,
-.header-nav-link:focus {
-  color: var(--brand-color);
-}
-
-.header-soc-list {
-  display: flex;
-  gap: 18px;
-}
-
-.header-soc-icon {
-  fill: var(--text-color);
-  transition: fill var(--transition);
-}
-
-.header-soc-icon:hover,
-.header-soc-icon:focus {
-  fill: var(--brand-color);
+.menu-icon:is(:hover, :active) {
+  stroke: var(--pressed-state);
 }
 
 /* hero */
 
 .hero {
-  padding-bottom: 72px;
+  padding-bottom: 59px;
 }
-
 .hero-container {
-  background-color: #1e1823;
   background-image: linear-gradient(
       180deg,
       rgba(17, 17, 17, 0) 0%,
       rgba(17, 17, 17, 0.4) 100%
     ),
-    url(../images/hero.jpg);
-  background-repeat: no-repeat;
+    url(../images/hero-bg-mob.jpg);
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
+  max-width: 290px;
+  background-color: #e9a07e;
   border-radius: 30px;
-  max-width: 1136px;
-  height: 600px;
-  padding: 381px 40px 40px 40px;
+  padding: 395px 20px 21px 20px;
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-bg-mob-2x.jpg);
+  }
 }
 
 .hero-title {
+  max-width: 299px;
+  color: var(--white);
+  font-size: 20px;
   font-weight: 500;
-  font-size: 28px;
-  line-height: calc(34 / 28);
-  letter-spacing: -0.03em;
-  color: #ffffff;
-  max-width: 468px;
+  line-height: 24px;
+  letter-spacing: -0.6px;
   margin-bottom: 32px;
 }
 
-.buttons-container {
+.hero-btn-container {
   display: flex;
-  align-items: center;
+  gap: 10px;
+  margin-bottom: 32px;
 }
-
 .hero-btn {
-  background: var(--brand-color);
   border-radius: 100px;
+  background: #fd9222;
+  padding: 12px 18px;
   border: none;
-  cursor: pointer;
-  font-weight: 600;
+  color: var(--white);
   font-size: 14px;
-  line-height: calc(17 / 14);
-  color: #ffffff;
-  padding: 14px 40px;
-  margin-right: 14px;
-  transition: background-color var(--transition);
-}
-
-.hero-btn:is(:hover, :focus) {
-  background-color: var(--pressed-state);
+  font-weight: 500;
+  line-height: normal;
+  cursor: pointer;
 }
 
 .hero-link {
-  border: 1px solid #ffffff;
   border-radius: 100px;
-  padding: 14px 40px;
-  font-weight: 600;
+  background: transparent;
+  padding: 12px 18px;
+  border: 1px solid var(--white);
+  color: var(--white);
   font-size: 14px;
-  line-height: calc(17 / 14);
-  color: #ffffff;
-  transition: border var(--transition), color var(--transition);
-}
-
-.hero-link:is(:hover, :focus) {
-  border: 1px solid var(--pressed-state);
-  color: var(--pressed-state);
-}
-
-.hero-scroll {
   font-weight: 500;
-  font-size: 14px;
-  line-height: calc(18 / 14);
-  letter-spacing: -0.03em;
-  color: #ffffff;
-  display: flex;
-  margin-left: auto;
-  align-items: center;
-  transition: color var(--transition);
+  line-height: normal;
 }
 
-.hero-scroll:is(:hover, :focus) {
-  color: var(--pressed-state);
+.hero-scroll-container {
+  display: flex;
+  gap: 12px;
+  align-content: center;
+}
+
+.hero-text {
+  display: flex;
+  align-items: center;
+  color: var(--white);
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: -0.36px;
 }
 
 .hero-scroll-icon {
   fill: var(--brand-color);
-  width: 38px;
-  height: 38px;
-  border: none;
-  border-radius: 50%;
-  background-color: #ffffff;
-  margin-left: 14px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  transition: background-color var(--transition), fill var(--transition);
-}
-
-.hero-scroll-icon:is(:hover, :focus) {
-  background-color: var(--pressed-state);
-  fill: #ffffff;
+  width: 28px;
+  height: 28px;
+  border-radius: 28px;
+  background: #fff;
 }
 
 /* benefits */
 
-.benefits {
+.benefits-container {
   background-color: #1e1823;
-  padding: 50px;
+  padding: 20px;
 }
 
 .benefits-list {
   display: flex;
-  gap: 70px;
-  justify-content: center;
-}
-
-.benefits-title {
-  font-weight: 600;
-  font-size: 18px;
-  line-height: calc(22 / 18);
-  color: #ffffff;
-  margin-bottom: 18px;
-}
-
-.benefits-text {
-  font-size: 14px;
-  line-height: calc(17 / 14);
-  letter-spacing: -0.02em;
-  color: rgba(255, 255, 255, 0.7);
-  max-width: 308px;
-}
-
-.benefits-item {
-  position: relative;
-}
-
-.benefits-item:not(:last-child):after {
-  content: "";
-  height: 124px;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  display: block;
-  position: absolute;
-  top: 60px;
-  right: -18px;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .benefits-item::before {
   content: "";
   width: 62px;
   height: 62px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 50%;
   display: block;
-  border: 1px solid rgba(255, 255, 255, 0.5);
   margin-bottom: 22px;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
-.benefits-item:first-child:before {
+.benefits-item:first-child::before {
   background-image: url(../images/chocolate-bar.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.benefits-item:nth-child(2):before {
+.benefits-item:nth-child(2)::before {
   background-image: url(../images/coin.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.benefits-item:last-child:before {
+.benefits-item:last-child::before {
   background-image: url(../images/spoon.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-/* ingridients */
-
-.ingridients {
-  padding: 100px 0;
-}
-.title {
+.benefits-title {
+  color: var(--white);
+  font-size: 18px;
   font-weight: 600;
-  font-size: 24px;
-  line-height: calc(28 / 24);
+  line-height: normal;
+  margin-bottom: 18px;
+}
+
+.benefits-text {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 14px;
+  line-height: normal;
+  letter-spacing: -0.28px;
+  max-width: 308px;
+}
+
+/* products */
+.products {
+  padding: 60px 0;
+}
+
+.products-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.products-title {
+  max-width: 283px;
+  height: 72px;
+  color: #111;
   text-align: center;
-  letter-spacing: -0.03em;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: -0.6px;
   text-transform: uppercase;
+  margin-bottom: 24px;
 }
 
-.ingridients-title {
-  max-width: 411px;
-  margin: 0 auto 28px;
-}
-
-.title-part {
+.products-title span {
   color: var(--brand-color);
 }
 
-.ingridients-text {
-  font-size: 14px;
-  line-height: calc(18 / 14);
+.products-text {
+  color: #111;
   text-align: center;
-  letter-spacing: -0.02em;
-  max-width: 486px;
-  margin: 0 auto 50px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: -0.28px;
+  margin-bottom: 32px;
 }
 
-.ingridients-list {
+.products-list {
   display: flex;
-  gap: 19px;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.ingridients-item:first-child {
+.products-item {
+  border-radius: 15px;
+  padding: 28px 55px 28px 56px;
+}
+
+.products-item:first-child {
   background-color: var(--brand-color);
 }
-.ingridients-item:nth-child(2) {
-  background-color: #ffffff;
+
+.products-item:nth-child(2) {
   border: 1px solid #fd9222;
+  background-color: var(--white);
 }
-.ingridients-item:nth-child(3) {
+.products-item:nth-child(3) {
   background-color: #1e1823;
 }
-.ingridients-item:last-child {
-  background-color: #ffffff;
+.products-item:last-child {
   border: 1px solid #fd9222;
+  background-color: var(--white);
 }
 
-.ingridients-item {
-  padding: 28px 36px 28px 28px;
-  border-radius: 15px;
-  position: relative;
-}
-
-.ingridients-desc {
-  font-weight: 600;
+.products-desc {
+  color: #fff;
   font-size: 14px;
-  line-height: calc(18 / 14);
-  letter-spacing: -0.02em;
-  text-transform: uppercase;
-  margin-top: 36px;
-}
-
-.ingridients-item:is(:first-child, :nth-child(3)) {
-  color: #ffffff;
-}
-
-.cover-title {
   font-weight: 600;
-  font-size: 18px;
-  line-height: calc(22 / 18);
-  letter-spacing: -0.03em;
+  line-height: 18px;
+  letter-spacing: -0.28px;
   text-transform: uppercase;
+  margin-top: 25px;
+}
+
+.products-item:nth-child(2) p {
   color: #111111;
 }
-
-.cover-text {
-  font-size: 14px;
-  line-height: calc(18 / 14);
-  letter-spacing: -0.02em;
+.products-item:last-child p {
   color: #111111;
-}
-
-.cover-link {
-  font-size: 10px;
-  line-height: calc(12 / 10);
-}
-
-.cover {
-  padding: 20px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #ffffff;
-  border-radius: 15px;
-  height: 100%;
-  overflow-y: auto;
-}
-
-.cover-list {
-  display: flex;
-}
-
-.cover-item:first-child {
-  background-color: var(--brand-color);
-  border-radius: 35px;
-  padding: 6px 16px;
 }
